--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/vue-query": "^5.67.1",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
+    "vue-final-modal": "^4.5.5",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
