--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-final-modal": "^4.5.5",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue-toast-notification": "^3.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
